--- a/Arc/index.html
+++ b/Arc/index.html
@@ -145,7 +145,7 @@
             <div v-if="what_law == 'law1'" class="row">
                 <div class="col-5">
                     <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                        <source src="Architecture/solve/law/ลาคลอด.mp4" type="video/mp4">
+                        <source src="Architecture/solve/law/ลาคลอด1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-7">
