--- a/Arc/index.html
+++ b/Arc/index.html
@@ -193,9 +193,9 @@
             </div>
             <div v-if="what_draft_law == 'draw_law0'" class="row">
                 <div class="col-7">
-                    <!-- <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                        <source src="Architecture/solve/draft law/" type="video/mp4">
-                    </video> -->
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draft law/3.กฎหมายทำแท้งเสรีChrysanthemum1.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="col-5">
                     <p class="topic_text">
@@ -209,9 +209,9 @@
             </div>
             <div v-if="what_draft_law == 'draw_law1'" class="row">
                 <div class="col-5">
-                    <!-- <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                        <source src="Architecture/solve/draft law/" type="video/mp4">
-                    </video> -->
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draft law/แต่งงานกับเด็ก1.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <div class="col-7">
                     <p class="topic_text">
