--- a/Arc/test_video.html
+++ b/Arc/test_video.html
@@ -8,13 +8,14 @@
 
 <body>
     <div id="app">
-        <video v-if="hover" @mouseleave="hover = false" id="vid" width="1280" height="720" autoplay muted style="margin: 0;">
+        <div @mouseover="hover = true" @mouseleave="hover = false">
+        <video v-if="hover"  id="vid" width="1280" height="720" autoplay muted style="margin: 0;">
             <source src="Kimetsu no yaiba movie Official Trailer.mp4" type="video/mp4">
             Kimetsu no yaiba movie Official Trailer.
             <!-- <source src="http://www.it.kmitl.ac.th/~it61070345/Architecture_Gif/Kimetsu%20no%20yaiba%20movie%20Official%20Trailer.mp4" type="video/mp4">
             Kimetsu no yaiba movie Official Trailer. -->
         </video>
-        <img v-if="!hover" @mouseover="hover = true" src="/Arc/Architecture/logoweb.png">
+        <img v-if="!hover"  src="/Arc/Architecture/logoweb.png"></div>
     </div>
 </body>
 <script>
