--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Skranji&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <!-- swiper -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <script src="swiper-bundle.min.js"></script>
@@ -38,9 +41,9 @@
                             <form action="javascript:;" class="form">
                                 <div class="form__group">
 
-                                    <input class="form__input" type="text" name="weight" required v-model="weight">
+                                    <input class="form__input" type="text" name="weight" placeholder="Weight" required v-model="weight">
                                     <div class="form__input-after"></div>
-                                    <label class="form__label" for="weight">Weight</label>
+
                                 </div>
 
                                 <div class="form__group">
