--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -1031,12 +1031,12 @@
             </div>
         </div>
 
-        <button v-if="p1" type="button" @click="changep1()" class="bp1">
+        <button v-if="p1" type="button" @click="changep1()" class="bpp1">
                 <span>Sort By <br> Solar</span>
-            </button>
-        <button v-else type="button" @click="changep2()" class="bp2">
+        </button>
+        <button v-else type="button" @click="changep2()" class="bpp2">
                 <span>Sort By <br> Gravity</span>
-            </button>
+        </button>
     </div>
 
     </div>
