--- a/Arc/index.html
+++ b/Arc/index.html
@@ -321,6 +321,11 @@
 
 </body>
 <script>
+    if (navigator.appVersion.indexOf("Mac") != -1) {
+        document.documentElement.style.setProperty("--mood_tone_1", '#f5f4f5');
+    } else{
+        document.documentElement.style.setProperty("--mood_tone_1", '#f3f2f3');
+    }
     fetch('Time_To_Bloom.json')
         .then(response => response.json())
         .then(json => {
@@ -399,13 +404,6 @@
             clearInterval(count_down);
         }
     }, 500);
-    if (navigator.appVersion.indexOf("Win") != -1) {
-        document.documentElement.style.setProperty("--mood_tone_1", '#f3f2f3');
-        console.log("win");
-    } else if (navigator.appVersion.indexOf("Mac") != -1) {
-        document.documentElement.style.setProperty("--mood_tone_1", '#f5f4f5');
-        console.log("Mac");
-    }
 </script>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
